force-app/main/default/objects/CoveoV2__CoveoCaseAttachedResult__c/CoveoV2__CoveoCaseAttachedResult__c.object-meta.xml
<CustomObject>
    <label>Attached Result</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attached Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>