force-app/main/default/objects/CoveoV2__CoveoCaseAttachedResult__c/fields/CoveoV2__ResultUrl__c.field-meta.xml
<CustomField>
    <fullName>CoveoV2__ResultUrl__c</fullName>
    <label>Result Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>