force-app/main/default/objects/CoveoV2__CoveoCaseAttachedResult__c/fields/CoveoV2__Title__c.field-meta.xml
<CustomField>
    <fullName>CoveoV2__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>